Fix many bugs reported by FindBugs & Android Lint